k8s-manifests/le-keycloak.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "14"
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"keycloak","project":"linkedeye"},"name":"keycloak","namespace":"le-keycloak"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"keycloak"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"keycloak","project":"linkedeye"}},"spec":{"containers":[{"args":["start","--health-enabled=true"],"envFrom":[{"configMapRef":{"name":"keycloak-config"}},{"secretRef":{"name":"keycloak-s [...]
    labels:
      app: keycloak
      project: linkedeye
    name: keycloak
    namespace: le-keycloak
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: keycloak
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-03-19T05:13:22+01:00"
        labels:
          app: keycloak
          project: linkedeye
      spec:
        containers:
        - args:
          - start
          - --health-enabled=true
          image: quay.io/keycloak/keycloak:23.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 90
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 10
          name: keycloak
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9000
            name: management
            protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        nodeSelector:
          role: mgmt-tools
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-03-19T07:09:15Z"
      lastUpdateTime: "2026-03-19T07:10:26Z"
      message: ReplicaSet "keycloak-6686c4d876" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-03-31T06:51:44Z"
      lastUpdateTime: "2026-03-31T06:51:44Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 21
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      alb.ingress.kubernetes.io/healthcheck-path: /health/ready
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"alb.ingress.kubernetes.io/healthcheck-path":"/health/ready"},"labels":{"app":"keycloak","project":"linkedeye"},"name":"keycloak-svc","namespace":"le-keycloak"},"spec":{"ports":[{"name":"http","nodePort":30081,"port":8080,"targetPort":8080},{"name":"management","port":9000,"targetPort":9000}],"selector":{"app":"keycloak"},"type":"NodePort"}}
    labels:
      app: keycloak
      project: linkedeye
    name: keycloak-svc
    namespace: le-keycloak
  spec:
    clusterIP: 172.20.93.161
    clusterIPs:
    - 172.20.93.161
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      nodePort: 30081
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: management
      nodePort: 32719
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: keycloak
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  data:
    KC_DB: postgres
    KC_DB_SCHEMA: public
    KC_DB_URL_DATABASE: keycloakdb
    KC_DB_URL_HOST: 172.20.67.14
    KC_DB_URL_PORT: "5432"
    KC_FEATURES: token-exchange,admin-fine-grained-authz
    KC_HOSTNAME: le-keycloak.finspot.in
    KC_HOSTNAME_STRICT: "false"
    KC_HOSTNAME_STRICT_HTTPS: "true"
    KC_HTTP_ENABLED: "true"
    KC_HTTP_PORT: "8080"
    KC_LOG_LEVEL: INFO
    KC_PROXY: edge
    KC_PROXY_ADDRESS_FORWARDING: "true"
    KEYCLOAK_STATISTICS: all
  kind: ConfigMap
  metadata:
    annotations:
        {"apiVersion":"v1","data":{"KC_DB":"postgres","KC_DB_SCHEMA":"public","KC_DB_URL_DATABASE":"keycloakdb","KC_DB_URL_HOST":"172.20.67.14","KC_DB_URL_PORT":"5432","KC_FEATURES":"token-exchange,admin-fine-grained-authz","KC_HOSTNAME":"le-keycloak.finspot.in","KC_HOSTNAME_STRICT":"false","KC_HOSTNAME_STRICT_HTTPS":"true","KC_HTTP_ENABLED":"true","KC_HTTP_PORT":"8080","KC_LOG_LEVEL":"INFO","KC_PROXY":"edge","KC_PROXY_ADDRESS_FORWARDING":"true","KEYCLOAK_STATISTICS":"all"},"kind":"ConfigMap","m [...]
    labels:
      app: keycloak
      project: linkedeye
    name: keycloak-config
    namespace: le-keycloak
- apiVersion: v1
  data:
    ca.crt: |
      -----BEGIN CERTIFICATE-----
      MIIDBTCCAe2gAwIBAgIIaD2eUcmw3GgwDQYJKoZIhvcNAQELBQAwFTETMBEGA1UE
[...]
      s+x6YEsT5iPc
      -----END CERTIFICATE-----
  kind: ConfigMap
  metadata:
    annotations:
      kubernetes.io/description: Contains a CA bundle that can be used to verify the
        kube-apiserver when using internal endpoints such as the internal service
        IP or kubernetes.default.svc. No other usage is guaranteed across distributions
        of Kubernetes clusters.
    name: kube-root-ca.crt
    namespace: le-keycloak
- apiVersion: v1
  data:
    KC_DB_PASSWORD: S2V5Y2xvYWtGaW5TcG90MjAyNQ==
    KC_DB_USERNAME: a2V5Y2xvYWs=
    KEYCLOAK_ADMIN: YWRtaW4=
    KEYCLOAK_ADMIN_PASSWORD: S2V5Y2xvYWtGaW5TcG90MjAyNQ==
  kind: Secret
  metadata:
    annotations:
        {"apiVersion":"v1","kind":"Secret","metadata":{"annotations":{},"labels":{"app":"keycloak","project":"linkedeye"},"name":"keycloak-secret","namespace":"le-keycloak"},"stringData":{"KC_DB_PASSWORD":"KeycloakFinSpot2025","KC_DB_USERNAME":"keycloak","KEYCLOAK_ADMIN":"admin","KEYCLOAK_ADMIN_PASSWORD":"KeycloakFinSpot2025"},"type":"Opaque"}
    labels:
      app: keycloak
      project: linkedeye
    name: keycloak-secret
    namespace: le-keycloak
  type: Opaque
- apiVersion: v1
  data:
    KC_DB_PASSWORD: S2V5Y2xvYWtGaW5TcG90MjAyNQ==
    KC_DB_USERNAME: a2V5Y2xvYWs=
    POSTGRES_DB: a2V5Y2xvYWtkYg==
    POSTGRES_HOST: MTcyLjIwLjY3LjE0
    POSTGRES_PASSWORD: S2V5Y2xvYWtGaW5TcG90MjAyNQ==
    POSTGRES_PORT: NTQzMg==
    POSTGRES_USER: a2V5Y2xvYWs=
  kind: Secret
  metadata:
    annotations:
        {"apiVersion":"v1","kind":"Secret","metadata":{"annotations":{},"labels":{"app":"keycloak","project":"linkedeye"},"name":"le-keycloak-db-secret","namespace":"le-keycloak"},"stringData":{"KC_DB_PASSWORD":"KeycloakFinSpot2025","KC_DB_USERNAME":"keycloak","POSTGRES_DB":"keycloakdb","POSTGRES_HOST":"172.20.67.14","POSTGRES_PASSWORD":"KeycloakFinSpot2025","POSTGRES_PORT":"5432","POSTGRES_USER":"keycloak"},"type":"Opaque"}
    labels:
      app: keycloak
      project: linkedeye
    name: le-keycloak-db-secret
    namespace: le-keycloak
  type: Opaque
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app":"keycloak","project":"linkedeye"},"name":"keycloak-network-policy","namespace":"le-keycloak"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}]},{"ports":[{"port":5432}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"le-postgres"}},"podSelector":{"matchLabels":{"app":"le-postgres"}}}]},{"ports":[{"port":443},{"port":80}]} [...]
    labels:
      app: keycloak
      project: linkedeye
    name: keycloak-network-policy
    namespace: le-keycloak
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - ports:
      - port: 5432
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: le-postgres
        podSelector:
          matchLabels:
            app: le-postgres
    - ports:
      - port: 443
        protocol: TCP
      - port: 80
        protocol: TCP
    ingress:
    - ports:
      - port: 8080
        protocol: TCP
      - port: 9000
        protocol: TCP
    podSelector:
      matchLabels:
        app: keycloak
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app":"keycloak-postgres","project":"linkedeye"},"name":"keycloak-postgres-network-policy","namespace":"le-keycloak"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"keycloak"}}}],"ports":[{"port":5432}]}],"podSelector":{"matchLabels":{"app":"keycloak-postgres"}},"policyTypes":["Ingress"]}}
    labels:
      app: keycloak-postgres
      project: linkedeye
    name: keycloak-postgres-network-policy
    namespace: le-keycloak
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: keycloak
      ports:
      - port: 5432
        protocol: TCP
    podSelector:
      matchLabels:
        app: keycloak-postgres
    policyTypes:
    - Ingress
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: default
    namespace: le-keycloak
kind: List
metadata:
